--- a/css/style.css
+++ b/css/style.css
@@ -8,10 +8,13 @@
 body{
  background-color:white;
  color: #000;
+ text-align: center;
 }
-.style{
-    background-color:#2196F3;
+
+.button{
+    background-color:white;
+    color:#2196F3;
+    text-decoration: none;
 }
-.link {
-    background-color:#2196F3; 
-}
+
+
