--- a/css/style.css
+++ b/css/style.css
@@ -1,14 +1,25 @@
-  @import url('https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Raleway:wght@700&display=swap');
 *{
-    font-family: 'Raleway','Roboto', sans-serif;
-}
-/*about_text{
-    font-family: 'Raleway','Roboto', sans-serif;
-}*/
+    padding: 0%;
+    margin: 0%;
+text-decoration: none;
+list-style: none;
+} 
 body{
+font-family: 'Raleway','Roboto', sans-serif;
  background-color:white;
  color: #000;
  text-align: center;
+}
+.logo-blue{
+    color: #2196F3;
+text-align: right;
+font-family: Raleway;
+font-size: 26px;
+font-style: normal;
+font-weight: 700;
+line-height: normal;
+letter-spacing: 0.78px;
 }
 
 .button{
