--- a/css/style.css
+++ b/css/style.css
@@ -9,7 +9,21 @@ body{
 font-family: 'Raleway','Roboto', sans-serif;
  background-color:white;
  color: #000;
- text-align: center;
+
+}
+.hero{
+    background:#2F303A ;
+    color: #ffffff;
+    text-align: center;
+    line-height: 60px;
+}
+.hero-btn{
+    background:#F5F4FA ;
+    color: #212121;
+}
+.hero-btn:hover{
+    background:#2196F3 ;
+    color: #ffffff;
 }
 .logo-blue{
     color: #2196F3;
@@ -20,12 +34,68 @@ font-style: normal;
 font-weight: 700;
 line-height: normal;
 letter-spacing: 0.78px;
+} 
+.header-home{
+    color: #212121;
+font-family: Roboto;
+font-size: 14px;
+font-style: normal;
+font-weight: 500;
+line-height: normal;
+letter-spacing: 0.28px;
+}
+.header-home:hover{
+    color: #2196F3;
 }
 
+.header-email{
+    
+    color:black;
+    font-family: Roboto;
+    font-size: 14px;
+    font-style: normal;
+    font-weight: 500;
+    line-height: normal;
+    letter-spacing: 0.28px;
+}
+.header-email:hover{
+color: #2196F3;
+
+
+
+}
+.header-tel {
+    
+    color:black;
+    font-family: Roboto;
+    font-size: 14px;
+    font-style: normal;
+    font-weight: 500;
+    line-height: normal;
+    letter-spacing: 0.28px; 
+}
+.header-tel:hover {
+    color: #2196F3;
+}
+
+
+.header-button{
+    text-align: center;
+}
 .button{
-    background-color:white;
-    color:#2196F3;
-    text-decoration: none;
+    color: #212121;
+    cursor: pointer;
+    border-radius: 4px;
+    width: 145px;
+    height: 38px;
 }
 
 
+.button:focus{
+background: #2196F3;
+}
+.button:hover{
+    background: #2196F3;
+   color:#ffffff ;
+
+}
