--- a/css/style.css
+++ b/css/style.css
@@ -14,16 +14,43 @@ font-family: 'Raleway','Roboto', sans-serif;
 .hero{
     background:#2F303A ;
     color: #ffffff;
-    text-align: center;
     line-height: 60px;
 }
+.hero-title{
+    background:#2F303A ;
+    color: #ffffff;
+    line-height: 60px;
+    text-align: center;
+}
+
 .hero-btn{
-    background:#F5F4FA ;
-    color: #212121;
+    background-color: #2196F3;
+    color:#ffffff;
 }
 .hero-btn:hover{
     background:#2196F3 ;
-    color: #ffffff;
+    color:#ffffff;
+}
+
+.politicas-title{
+    color: #212121;
+    font-family: Roboto;
+    font-size: 14px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: normal;
+    letter-spacing: 0.42px;
+    text-transform: uppercase;
+}
+
+.politicas-text{
+    color: #757575;
+font-family: Roboto;
+font-size: 14px;
+font-style: normal;
+font-weight: 400;
+line-height: 24px; /* 171.429% */
+letter-spacing: 0.42px;
 }
 .logo-blue{
     color: #2196F3;
@@ -79,9 +106,7 @@ color: #2196F3;
 }
 
 
-.header-button{
-    text-align: center;
-}
+
 .button{
     color: #212121;
     cursor: pointer;
@@ -89,8 +114,6 @@ color: #2196F3;
     width: 145px;
     height: 38px;
 }
-
-
 .button:focus{
 background: #2196F3;
 }
@@ -99,3 +122,4 @@ background: #2196F3;
    color:#ffffff ;
 
 }
+
