--- a/css/style.css
+++ b/css/style.css
@@ -1,13 +1,13 @@
 @import url('https://fonts.googleapis.com/css2?family=Raleway:wght@700&display=swap');
 *{
-    padding: 0%;
-    margin: 0.6%;
+  
 text-decoration: none;
 list-style: none;
-letter-spacing: 0.03;
+
 } 
 :root{
     --blue:#2196F3;
+    --black:#212121;
 }
 body{
 font-family:'Roboto', sans-serif;
@@ -22,7 +22,6 @@ font-family: 'Raleway';
 font-size: 26px;
 font-style: normal;
 font-weight: 700;
-line-height: 1.17em;
 letter-spacing: 0.03em;
 cursor: pointer;
 }
@@ -39,7 +38,6 @@ cursor: pointer;
 .link:hover{
     color: var(--blue);
 }
-
 .header-email{
     font-family: 'Roboto', sans-serif;
     color: #757575;
@@ -67,16 +65,7 @@ color:var(--blue);
 .header-tel:hover {
     color: var(--blue);
 }
-.hero{
-     background:#2F303A ;
-     font-family: 'Roboto', sans-serif;
-    color: #ffffff;
-    line-height: 1.8em;
-font-size:16px;
-font-style: normal;
-font-weight: 700;
-letter-spacing: 0.03em;
-}
+
 .hero-btn{
     background-color: var(--blue);
     color:#ffffff;
@@ -86,10 +75,11 @@ letter-spacing: 0.03em;
     font-family:'Roboto', sans-serif;
 font-weight: 700;
 letter-spacing: 0.06em;
-cursor: pointer;
+padding:10px 20px;
+border-radius: 4px;
+
 }
 .hero-title{
-    background:#2F303A;
     font-family:'Roboto', sans-serif;
     color: #ffffff;
     line-height:1.3em;
@@ -98,6 +88,8 @@ cursor: pointer;
     font-weight: 900;
     letter-spacing: 0.03em;
     text-transform: uppercase; 
+    text-align: center;
+
 
 }
 
@@ -120,6 +112,7 @@ font-style: normal;
 font-weight: 400;
 line-height: 1.71em;
 letter-spacing: 0.03em;
+text-align: justify;
   }
 .diseño-title{
     color: #212121;
@@ -212,3 +205,85 @@ font-weight: 400;
 line-height:1.8em;
 letter-spacing: 0.4;
 }
+
+
+/*     estilos del header menu principal web studio */
+.container{
+    
+width:1200px;
+padding:0 15px;
+margin: 0 auto;
+}
+
+.navigation__container{
+    display: flex;
+    justify-content: space-between;
+}
+
+.hero__navegation{
+    display: flex;
+    column-gap: 80px;
+    justify-content: center;
+    align-content: center;
+   /* padding: 25px; */
+}
+
+.hero__contact{
+    display: flex;
+    column-gap: 40px;
+    justify-content: center;
+    align-items: center;
+}
+
+.pv-main{
+    padding: 5px 0;
+}
+p-0{
+    padding: 0px;
+}
+.list{
+    list-style: none;
+}
+
+.link{
+    text-decoration: none
+}
+.header-menu.current{
+color:var(--blue);
+}
+
+/* ------segunda seccion titulo-------------------------------------------------------*/
+.hero{
+    background-color: var(--black) ;
+    font-family: 'Roboto', sans-serif;
+    color: #ffffff;
+    line-height: 1.8em;
+font-size:16px;
+font-style: normal;
+font-weight: 700;
+letter-spacing: 0.03em;
+}
+.section{
+    padding-bottom: 94px;
+    padding-top: 94px;
+}
+.title_container{
+    display: flex;
+    flex-direction: column;
+    width:800px;
+    align-items: center;
+}
+/*---------tercera seccion productos----------*/
+
+.about__galery{
+    display: flex;
+    gap: 40px;
+
+}
+
+
+
+
+
+
+
